# rinnsal

./: .claudepod  .gitignore  README.md  pyproject.toml  task.md
.githooks/: pre-commit
examples/: 01_basic_tasks.py  02_diamond_dependencies.py  03_retry_and_errors.py  04_flow_result_indexing.py  05_config_and_parameters.py  06_caching_and_persistence.py  07_subprocess_executor.py  08_logger.py  08_progress_tracking.py  09_independent_task.py  09_ml_pipeline.py  10_capture_tasks.py  10_cli_usage.py  11_ssh_executor.py  12_filtering.py  13_slurm_executor.py  14_slurm_sweep.py  15_checkpointing.py  16_cards.py  17_logger_in_tasks.py  README.md
runs/run_20260316_143500/: events.pb
src/rinnsal/: __init__.py  context.py
src/rinnsal/cli/: __init__.py  flags.py  parser.py  runner.py
src/rinnsal/core/: __init__.py  expression.py  flow.py  graph.py  hashing.py  registry.py  registry_build.py  snapshot.py  task.py  types.py
src/rinnsal/execution/: __init__.py  executor.py  inline.py  provisioner.py  ray_executor.py  scheduler.py  slurm.py  ssh.py  subprocess.py
tests/: conftest.py
tests/integration/: test_caching.py  test_checkpoint_slurm_batch.py  test_flow_execution.py  test_flow_filter.py  test_flow_resume.py  test_metaflow_features.py  test_resources_and_cards.py  test_snapshot_replay.py
tests/unit/: test_cli_parser.py  test_database.py  test_expression.py  test_file_store.py  test_graph.py  test_hashing.py  test_logger.py  test_registry_build.py  test_serializers.py  test_snapshot.py  test_snapshot_overhaul.py  test_task.py  test_task_runs.py  test_types.py
(+42 files in other folders)
